# aidoc

./: .gitignore  artificial_intelligence_api.py  pyproject.toml  readme.txt  requirements.txt  schema.sql  test.py  test_db.txt  wsgi.py
aidoc/: __init__.py  auth.py  db.py  editing_mask.py  general.py  image.py  move_image.py  osm_group.py  osm_hierarchy.py  patient_auth.py  requirements.txt  risk_oca.py  user.py  utils.py  webapp.py  x.py
aidoc/API/admin/: __init__.py  admin.py  admin_mapper.py  check_phone.py  delete_user_account.py  get_image_manage.py  get_user_account_list.py  (+3 more)
aidoc/old/: test.py
aidoc/static/: style.css
aidoc/templates/: about.html  admin_checking.html  admin_diagnosis.html  admin_record.html  base.html  base_earthchie.html  base_patient_record.html  dentist_diagnosis.html  dentist_history.html  dentist_login.html  dentist_record.html  dentist_register.html  dentist_upload.html  dentist_upload_new.html  document_display.html  edit.html  example.html  examples_footer.html  examples_footer_en.html  forgot_password.html  general_diagnosis.html  general_login.html  general_mask_editor.html  general_register.html  general_upload.html  log.html  mask_editor.html  osm_diagnosis.html  osm_history.html  osm_record.html  osm_register.html  osm_upload.html  patient_diagnosis.html  patient_login.html  patient_record.html  patient_record_obsolete.html  patient_register.html  patient_upload.html  picture_management.html  specialist_diagnosis.html  (+8 more)
imageQualityChecker/: __init__.py  imageQualityChecker.tflite:Zone.Identifier
instance/: config.py
(+61 files in other folders)
