[project]
name = "aidoc"
version = "3.0.0"
description = "Artificial Intelligence system for Detecting Oral Cancer (AIDOC)"
dependencies = [
    "Flask", "mysql-connector-python", "tensorflow", "pillow", "opencv-python", "python-dateutil"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"